--- a/package.yaml
+++ b/package.yaml
@@ -77,6 +77,7 @@ default-extensions:
 - TemplateHaskell
 - QuasiQuotes
 - GeneralizedNewtypeDeriving
+- DefaultSignatures
 #- OverloadedLists
 
 library:
