Added differentiable functions, a type class for types that can be converted to/from pairs, used constraint synonyms for Vectorlike and AbGroup instead of type classes (SOOO much cleaner), and added a dependency on constrained-categories in order to create the category of differentiable functions

--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,7 @@ dependencies:
 #- bytestring
 #- binary
 - FontyFruity
+- constrained-categories
 - tasty # for unit tests
 - criterion # for benchmarks
 - linear # for low dimensional linear algebra. For now only using it for 4D vectors, but if it is faster,
@@ -85,6 +86,7 @@ default-extensions:
 - QuasiQuotes
 - GeneralizedNewtypeDeriving
 - DefaultSignatures
+- ConstraintKinds
 #- OverloadedLists
 
 library:
