--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.1
+resolver: lts-12.9
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -37,21 +37,32 @@ resolver: lts-11.1
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- constrained-categories
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: 
 - hip-1.5.3.0
-- Chart-diagrams-1.8.3
+- Chart-diagrams-1.9
+- Chart-1.9
 - SVGFonts-1.6.0.3
-- diagrams-core-1.4.0.1
-- diagrams-lib-1.4.2
-- diagrams-postscript-1.4
-- diagrams-svg-1.4.1.1
-- diagrams-solve-0.1.1
-- dual-tree-0.2.1
-- lens-4.15.4
-- free-4.12.4
-- constrained-categories-0.3.1.0
+#- diagrams-core-1.4.0.1
+#- diagrams-lib-1.4.2
+#- diagrams-postscript-1.4
+#- diagrams-svg-1.4.1.1
+#- diagrams-solve-0.1.1
+#- dual-tree-0.2.1
+#- lens-4.15.4
+#- free-4.12.4
+#- constrained-categories-0.3.1.0
+#- vector-sized-1.0.4.0
+#- indexed-list-literals-0.2.1.1
+#- criterion-1.5.1.0
+#- base-compat-batteries-0.10.4
+#- criterion-measurement-0.1.1.0
+#- base-compat-0.10.3
+#- contravariant-1.5
+#- StateVar-1.1.1.1
+#- base-4.10.1.0
 
 
 # Override default flag values for local packages and extra-deps
