--- a/stack.yaml
+++ b/stack.yaml
@@ -50,6 +50,8 @@ extra-deps:
 - Chart-diagrams-1.9
 - Chart-1.9
 - SVGFonts-1.6.0.3
+- GLUtil-0.10.2
+- hpp-0.6.1
 #- diagrams-core-1.4.0.1
 #- diagrams-lib-1.4.2
 #- diagrams-postscript-1.4
